# cargo-apple-runner

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  foo.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: binary.rs  bundle.rs  cargo.rs  lib.rs  main.rs  process.rs  sign.rs  simctl.rs  util.rs  version.rs
src/simctl/: tests.rs  xcode_26.json  xcode_9.json
tests/: bundled.rs  entitlements_applied.rs  info_plist_applied.rs  keychain-group.entitlements  sandbox_applied.rs  test.plist
