[package]
name = "cargo-apple-runner"
version = "0.1.0"
description = "Cargo runner for bundling and launching applications on simulator / on device"
keywords = ["cargo", "macos", "ios", "xcode"]
categories = [
    "command-line-utilities",
    "development-tools::cargo-plugins",
    "os::macos-apis",
]
authors = ["Mads Marquart <mads@marquart.dk>"]
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/madsmtm/cargo-apple-runner"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
embed_plist = "1.0"
object = "0.39.0"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"

[dev-dependencies]
embed_plist = "1.2.2"
embed_entitlements = "0.1.0"
objc2-core-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "CFArray",
    "CFBundle",
    "CFData",
    "CFDictionary",
    "CFError",
    "CFNumber",
    "CFString",
    "CFURL",
] }
objc2-security = { version = "0.3.2", default-features = false, features = [
    "std",
    "SecBase",
    "SecItem",
    "SecTask",
] }

[package.metadata.typos]
default.extend-words.udid = "udid"
